--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,12 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\marcos\\.netbeans\\7.0\\build.properties
+do.depend=false
+do.jar=true
+file.reference.Commons-logging-1.1.jar=/Users/marcossilva/Dropbox/Marcos/ijk/Neos/GIT/NEOS_GAMS/Commons-logging-1.1.jar
+file.reference.Jcommon-1.0.16.jar=/Users/marcossilva/Dropbox/Marcos/ijk/Neos/GIT/NEOS_GAMS/Jcommon-1.0.16.jar
+file.reference.neos.jar=/Users/marcossilva/Dropbox/Marcos/ijk/Neos/GIT/NEOS_GAMS/neos.jar
+file.reference.Ws-commons-util-1.0.2.jar=/Users/marcossilva/Dropbox/Marcos/ijk/Neos/GIT/NEOS_GAMS/Ws-commons-util-1.0.2.jar
+file.reference.Xmlrpc-client-3.1.3.jar=/Users/marcossilva/Dropbox/Marcos/ijk/Neos/GIT/NEOS_GAMS/Xmlrpc-client-3.1.3.jar
+file.reference.Xmlrpc-common-3.1.3.jar=/Users/marcossilva/Dropbox/Marcos/ijk/Neos/GIT/NEOS_GAMS/Xmlrpc-common-3.1.3.jar
+javac.debug=true
+javadoc.preview=true
+user.properties.file=/Users/marcossilva/.netbeans/7.0/build.properties
